# AOC2024

./: README.md
01/: CMakeLists.txt  main.cpp
01/assets/: notes.txt
02/: CMakeLists.txt
02/assets/: notes.txt
02/include/: utility.h
02/src/: main.cpp  utility.cpp
03/assets/: notes.txt
03/include/: utility.h
03/src/: main.cpp  utility.cpp
04/: CMakeLists.txt
04/assets/: notes.txt
04/include/: utility.h
04/src/: main.cpp  utility.cpp
